--- a/design.css
+++ b/design.css
@@ -1,7 +1,7 @@
 body {
 	height: 100vh;
 	margin: 0;
-	background-color: $body-background;
+	background-color: lightblue;
 	font-family: "ubuntu", Arial, sans-serif;
 	overflow-x: hidden;
 	display: grid;
