--- a/design.css
+++ b/design.css
@@ -10,30 +10,24 @@ span{
 }
 
 
-a.button8{
+.myButton {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
 	display:inline-block;
-	padding:0.2em 1.45em;
-	margin:0.1em;
-	border:0.15em solid #CCCCCC;
-	box-sizing: border-box;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
 	text-decoration:none;
-	font-family:'Segoe UI','Roboto',sans-serif;
-	font-weight:400;
-	color:#000000;
-	background-color:#CCCCCC;
-	text-align:center;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#48941f;
+}
+.myButton:active {
 	position:relative;
-	}
-	a.button8:hover{
-	border-color:#7a7a7a;
-	}
-	a.button8:active{
-	background-color:#999999;
-	}
-	@media all and (max-width:30em){
-	 a.button8{
-	display:block;
-	margin:0.2em auto;
-	}
-} 
+	top:1px;
+}
 
